objects/Studies_Study_Manager__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <label>Contact Full Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Studies</relationshipLabel>
        <relationshipName>Studies_Study_Managers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PTC_Connection_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This opts the contact into receiving PTC Emails from Yuzu.</inlineHelpText>
        <label>PTC Connection Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_Mgr_No__c</fullName>
        <displayFormat>SSM-{00000}</displayFormat>
        <label>Study Mgr No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Study</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipName>Studies_Study_Managers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Study Manager</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Study__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Recently Created</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Study Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>